--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,8 +29,9 @@ bind-key X          kill-window
 ## plugins
 set -g @plugin 		'tmux-plugins/tpm'
 set -g @plugin 		'tmux-plugins/tmux-sensible'
-set -g @plugin 		'dracula/tmux'
 set -g @plugin 		'tmux-plugins/tmux-continuum'
+set -g @plugin      'erikw/tmux-powerline'
 
 run 				'~/.tmux/plugins/tpm/tpm'
+
 
