--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,9 +3,9 @@ set -g prefix C-x
 bind C-x send-prefix
 unbind C-a
 
-
-
 ## keys
+set -sg escape-time 0
+setw -g mode-keys vi
 bind-key |          split-window -h -c "#{pane_current_path}"
 bind-key -          split-window -v -c "#{pane_current_path}"
 bind-key r			source-file ~/.tmux.conf \; display-message "Configuration reloaded"
@@ -25,12 +25,39 @@ bind-key -r BTab 	select-pane -t :.-
 bind-key x          kill-pane
 bind-key X          kill-window
 
+## for 2.4
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi V send -X rectangle-toggle
+bind-key -T edit-mode-vi Up send-keys -X history-up
+bind-key -T edit-mode-vi Down send-keys -X history-down
+
+bind-key C-v run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
+bind-key Space choose-buffer
+bind-key i set-window-option synchronize-panes
+
+# resize
+bind-key S-Right resize-pane -R 10 \; switch-client -T "resize-pane"
+bind-key S-Left resize-pane -L 10 \; switch-client -T "resize-pane"
+bind-key -T "resize-pane" S-Right resize-pane -R 5 \; switch-client -T "resize-pane"
+bind-key -T "resize-pane" S-Left resize-pane -L 5 \; switch-client -T "resize-pane"
+bind-key S-Down resize-pane -D 5  \; switch-client -T "resize-pane"
+bind-key S-Up resize-pane -U 5  \; switch-client -T "resize-pane"
+bind-key -T "resize-pane" S-Down resize-pane -D \; switch-client -T "resize-pane"
+bind-key -T "resize-pane" S-Up resize-pane -U \; switch-client -T "resize-pane"
+
+## enable mouse
+set -g mouse on
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
 
 ## plugins
 set -g @plugin 		'tmux-plugins/tpm'
 set -g @plugin 		'tmux-plugins/tmux-sensible'
 set -g @plugin 		'tmux-plugins/tmux-continuum'
 set -g @plugin      'erikw/tmux-powerline'
+set -g @plugin      'nyuyuyu/tmux-pet'
+set -g @pet-vertical-split-pane-key 'C-f'
 
 run 				'~/.tmux/plugins/tpm/tpm'
 
